Add comparison table

--- a/index.html
+++ b/index.html
@@ -13,5 +13,85 @@
 <li>Exchange Sort & Select Sort</li>
 <li>Radix Sort</li>
 </ul>
+
+<table border="1" cellspacing="0" cellpadding="3">
+<tbody>
+<tr>
+<td><span style="font-size: medium;">Sorting Method</span></td>
+<td><span style="font-size: medium;">Average Time</span></td>
+<td><span style="font-size: medium;">Worse Case</span></td>
+<td><span style="font-size: medium;">Stability</span></td>
+<td><span style="font-size: medium;">Space Needed</span></td>
+<td><span style="font-size: medium;">Note</span></td>
+</tr>
+<tr>
+<td><span style="font-size: medium;">Bubble Sort</span></td>
+<td><span style="font-size: medium;">O(n<sup>2</sup>)</span></td>
+<td><span style="font-size: medium;">O(n<sup>2</sup>)</span></td>
+<td><span style="font-size: medium;">Stable</span></td>
+<td><span style="font-size: medium;">O(1)</span></td>
+<td><span style="font-size: medium;">works better if n is small</span></td>
+</tr>
+<tr>
+<td><span style="font-size: medium;">Exchange Sort & Select Sort</span></td>
+<td><span style="font-size: medium;">O(n<sup>2</sup>)</span></td>
+<td><span style="font-size: medium;">O(n<sup>2</sup>)</span></td>
+<td><span style="font-size: medium;">Unstable</span></td>
+<td><span style="font-size: medium;">O(1)</span></td>
+<td><span style="font-size: medium;">works better if n is small</span></td>
+</tr>
+<tr>
+<td><span style="font-size: medium;">Insert Sort</span></td>
+<td><span style="font-size: medium;">O(n<sup>2</sup>)</span></td>
+<td><span style="font-size: medium;">O(n<sup>2</sup>)</span></td>
+<td><span style="font-size: medium;">Stable</span></td>
+<td><span style="font-size: medium;">O(1)</span></td>
+<td><span style="font-size: medium;">works better when majority is orderred</span></td>
+</tr>
+<tr>
+<td><span style="font-size: medium;">Radix Sort</span></td>
+<td><span style="font-size: medium;">O(log<sub>R</sub>B)</span></td>
+<td><span style="font-size: medium;">O(log<sub>R</sub>B)</span></td>
+<td><span style="font-size: medium;">Stable</span></td>
+<td><span style="font-size: medium;">O(n)</span></td>
+<td>
+<p><span style="font-size: medium;">B is real number(0-9)，</span></p>
+<p><span style="font-size: medium;">R is base (10<sup>n</sup>)</span></p>
+</td>
+</tr>
+<tr>
+<td><span style="font-size: medium;">Shell</span></td>
+<td><span style="font-size: medium;">O(nlogn)</span></td>
+<td><span style="font-size: medium;">O(n<sup>s</sup>) 1&lt;s&lt;2</span></td>
+<td><span style="font-size: medium;">Unstable</span></td>
+<td><span style="font-size: medium;">O(1)</span></td>
+<td><span style="font-size: medium;">s is chosen group</span></td>
+</tr>
+<tr>
+<td><span style="font-size: medium;">Quick Sort</span></td>
+<td><span style="font-size: medium;">O(nlogn)</span></td>
+<td><span style="font-size: medium;">O(n<sup>2</sup>)</span></td>
+<td><span style="font-size: medium;">Unstable</span></td>
+<td><span style="font-size: medium;">O(nlogn)</span></td>
+<td><span style="font-size: medium;">works better if n is larger</span></td>
+</tr>
+<tr>
+<td><span style="font-size: medium;">Merge Sort</span></td>
+<td><span style="font-size: medium;">O(nlogn)</span></td>
+<td><span style="font-size: medium;">O(nlogn)</span></td>
+<td><span style="font-size: medium;">Stable</span></td>
+<td><span style="font-size: medium;">O(1)</span></td>
+<td><span style="font-size: medium;">works better if n is larger</span></td>
+</tr>
+<tr>
+<td><span style="font-size: medium;">Heap Sort</span></td>
+<td><span style="font-size: medium;">O(nlogn)</span></td>
+<td><span style="font-size: medium;">O(nlogn)</span></td>
+<td><span style="font-size: medium;">Unstable</span></td>
+<td><span style="font-size: medium;">O(1)</span></td>
+<td><span style="font-size: medium;">works better if n is larger</span></td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
