add notepad memo

--- a/index.html
+++ b/index.html
@@ -93,5 +93,11 @@
 </tr>
 </tbody>
 </table>
+
+<hr>
+
+data:text/html, &lt;html contenteditable&gt;
+
+Above line convert chrome browser into notepad.
 </body>
 </html>
