--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
 <hr>
 
-data:text/html, &lt;html contenteditable&gt;
-
+<p>data:text/html, &lt;html contenteditable&gt;</p>
+<br>
 Above line convert chrome browser into notepad.
 </body>
 </html>
