--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
 </table>
 
 <hr>
-
+<h2>Above line convert chrome browser into notepad.</h2>
 <p>data:text/html, &lt;html contenteditable&gt;</p>
-<br>
-Above line convert chrome browser into notepad.
 </body>
 </html>
